# xkpasswd-rs

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Makefile  README.md  netlify.toml
.github/workflows/: cargo.yml  production_deployment.yaml  staging_build.yaml  staging_deploy.yaml  staging_deployment.yaml  wasm_pack.yml
arch-linux/: .gitignore  Makefile  PKGBUILD
docs/plans/: 2026-01-26-modernization.md
raw_assets/: convert_dict.py  frequencywords_converter.py  hermitdave_frequencywords_de_50k.txt  hermitdave_frequencywords_en_50k.txt  hermitdave_frequencywords_es_50k.txt  hermitdave_frequencywords_fr_50k.txt  hermitdave_frequencywords_pt_50k.txt  raw_dict_converter.py  raw_dict_de.txt  raw_dict_en.txt  raw_dict_es.txt  raw_dict_fr.txt  raw_dict_pt.txt
src/: bit_flags.rs  cli.rs  error.rs  lib.rs  main.rs  prelude.rs  settings.rs  wasm_utils.rs  xkpasswd.rs
src/assets/: dict_de.txt  dict_en.txt  dict_es.txt  dict_fr.txt  dict_pt.txt
src/cli/: mod.rs  tests.rs  toml_conf.rs
src/prelude/: mod.rs  proptest_tests.rs  tests.rs
src/settings/: mod.rs  proptest_tests.rs  tests.rs
src/wasm/: mod.rs  utils.rs
tests/: proptest_integration.rs
www/: .eslintignore  .eslintrc.cjs  .gitattributes  .gitignore  .prettierrc  bootstrap.ts  eslint.config.js  index.html  index.js  index.ts  mise.toml  package-lock.json  package.json  tailwind.config.cjs  tailwind.config.js  tsconfig.json  vite.config.ts  webpack.config.js
www/public/: manifest.webmanifest
www/scripts/: wasm-pack-build.sh
www/src/: DropdownButton.tsx  app.css  app.tsx  contexts.tsx  main.css  main.tsx  utils.ts  vite-env.d.ts  wasm.ts
www/src/ControlPanel/: CountSlider.tsx  Editable.tsx  Languages.tsx  Presets.tsx  Separators.tsx  SymbolsInput.tsx  WordTransforms.tsx  WordTransformsMenu.tsx  WordsCount.tsx  cliNames.ts  cmdString.test.ts  cmdString.ts  editing.test.ts  editing.ts  index.tsx  positioning.test.ts  positioning.ts  styles.css
www/src/DropdownButton/: index.tsx  styles.css
www/src/Entropy/: index.tsx  styles.css
www/src/Header/: index.tsx  styles.css
www/src/Icons/: index.tsx
www/src/PasswordBox/: index.tsx  segment.test.ts  segment.ts  styles.css
www/src/Presets/: index.tsx  styles.css
www/src/Version/: index.tsx  styles.css
www/src/types/: xkpasswd.d.ts
