[package]
name = "xkpasswd-rs"
version = "0.1.0"
edition = "2021"
default-run = "xkpasswd"
description = "XKCD password generator, written in Rust with supports for Wasm in mind"
repository = "https://github.com/ethan605/xkpasswd-rs"
license = "GNU General Public License v3.0"

[profile.release]
opt-level = 'z'     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*

[[bin]]
name = "xkpasswd"
path = "src/main.rs"

[lib]
name = "xkpasswd"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]
benchmarks = []

[dependencies]
console_error_panic_hook = { version = "0.1.7", optional = true }
getrandom = { version = "0.2.8", features = ["js"] }
rand = "0.8.5"
wasm-bindgen = "0.2.83"

[dev-dependencies]
wasm-bindgen-test = "0.3.33"
