[package]
name = "xkpasswd-rs"
version = "0.1.0"
edition = "2021"
default-run = "xkpasswd"
description = "XKCD password generator, written in Rust with supports for Wasm in mind"
repository = "https://github.com/ethan605/xkpasswd-rs"
license = "GNU General Public License v3.0"

[profile.release]
opt-level = 'z'     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*

[[bin]]
name = "xkpasswd"
path = "src/main.rs"

[lib]
name = "xkpasswd"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[features]
default = ["cli", "wasm", "all_langs"]
cli = ["clap", "log", "stderrlog", "toml", "dirs"]
cli_dev = ["cli"]
wasm = ["getrandom", "log"]
wasm_dev = ["wasm", "console_error_panic_hook", "web-sys"]
all_langs = ["lang_de", "lang_en", "lang_es", "lang_fr", "lang_pt"]
lang_de = []
lang_en = []
lang_es = []
lang_fr = []
lang_pt = []

[dependencies]
clap = { version = "4.0.26", features = ["derive"], optional = true }
console_error_panic_hook = { version = "0.1.7", optional = true }
dirs = { version = "4.0.0", optional = true }
getrandom = { version = "0.2.8", features = ["js"], optional = true }
log = { version = "0.4.17", optional = true }
rand = "0.8.5"
stderrlog = { version = "0.5.4", optional = true }
toml = { version = "0.5.9", optional = true }
wasm-bindgen = "0.2.83"
web-sys = { version = "0.3.60", features = ["console"], optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.33"
